# DnD-Card-Generator

./: Makefile  README.md  dev-requirements.txt  pyproject.toml
dnd_card_generator/: __init__.py  card_generator.py  convert.py  split_by_size.py
example/: example_badge.yaml  example_goblin.yaml
test/: size_test.yaml
